# mostremos

./: .gitignore  README.md  anywhere.py  anywhere_make_server.sh  anywhere_start_deployment.sh  crowdsource_devel.db  crowdsource_devel.db-shm  crowdsource_devel.db-wal  generate_secret.sh  pyproject.toml
anywhere/backend/: requirements.txt
anywhere/frontend/: manifest.json
frontend/: index.html
frontend/js/: app.js  categories.js  db.js  sw.js
prompts/: .config.yaml.kate-swp  config.yaml  wsgi.py
prompts/implementation/: alpha.md  bravo.md
prompts/specs/: alpha.md  bravo.md  charlie.md  delta.md
reports/alpha/: latest_sync.json  report_20260423_183327.json  report_20260423_191120.json
scripts/: init_db.py  test_upload.py
